# infra-action-mark2confluence

./: .gitignore  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  Makefile  Pipfile  README.md  Taskfile.yml  action.yml  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: checks.yaml  pr-docker-test.yaml  pr_version_tag.yaml  tag_and_build.yaml
mark2confluence/: README.md  __init__.py  main.py
scripts/: bump_version.py
tests/: test_main.py
tests/resources/markdown/test_begins_with_mark_headers/: with_mark_headers_in_the_content.md  with_mark_space_header.md  with_mark_title_header.md
tests/resources/markdown/test_has_mark_headers/: with_mark_parent_header.md  without_mark_headers.md
tests/resources/markdown/test_inject_default_parents/: 0-input.md  0-output.md  1-output.md
tests/resources/markdown/test_inject_header/: with_broken_open_multiline_comments.md  with_macros.md  with_standard_mark_headers.md
